# carpentry-production-control

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
accounts/: forms.py  models.py  services.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_fields.py  0003_changerequest.py
catalog/: library_config.py  models.py  seeds.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_system_seeds.py  0003_materialvariant_required_fields.py  0004_alter_station_code_station_uq_station_workshop_code.py
catalog/templatetags/: library_extras.py
config/: urls.py  views.py  wsgi.py
config/settings/: base.py  dev.py  test.py
notifications/: context_processors.py  models.py  services.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
shell/: context_processors.py  middleware.py  models.py  roles.py  urls.py  views.py
templates/: base.html  home.html
tests/: factories.py  test_admin_registration.py  test_auth.py  test_change_request_model.py  test_change_request_workflow.py  test_import_dependent_types.py  test_import_engine.py  test_library_models.py  test_notification_model.py  test_notification_triggers.py  test_notifications_page.py  test_profile_page.py  test_seed_demo_users.py  test_shell_routes.py  test_smoke.py  test_system_seeds.py  test_user_model.py  test_workshop_models.py  test_workshop_setup_gate.py
workshop/: forms.py  middleware.py  services.py  urls.py  views.py
(+52 files in other folders)
